# neilplot

./: Cargo.toml
examples/: bar_chart.rs  histogram.rs  plot_csv.rs  trendline.rs
src/: bounds.rs  legend.rs  lib.rs  marker.rs  theme.rs
src/axes/: bar_chart.rs  histogram.rs  line.rs  mod.rs  scatter.rs
src/render/: mod.rs  texture.rs  window.rs
